--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </a>
             <nav>
                 <div class="nav">
-                    <button class="button" onclick="scrollToAbout()">О НАС</button>
+                    <button class="button">О НАС</button>
                     <button class="button">МУЗЫКА</button>
                     <button class="button">ДИСКОГРАФИЯ</button>
                     <button class="button">МЕРЧ</button>
@@ -73,7 +73,7 @@
                             <p class="hist3">На данный момент в группе 3 участника: 
                                 <span class="txt">Ярослав Фляйшман</span> 
                                 (соло гитара, вокал)
-                                <span class="txt"> Сева Шнайдер</span> 
+                                <span class="txt"> Савелий Шнайдер</span> 
                                 (ритм гитара),<span class="txt"> Клим Дёмин</span> (бас гитара)
                             </p>
                         </div>
