--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
                                   <span class="txt">Nargaroth</span>,
                                   <span class="txt"> Venom</span>, <span class="txt">Bathory</span> и <span class="txt">Mutiilation</span>
                             </p>     
-                            <p class="hist3">На данный момент в группе 3 участника: 
+                            <p class="hist3">На данный момент в группе: 
                                 <span class="txt">Ярослав Фляйшман</span> 
                                 (соло гитара, вокал)
                                 <span class="txt"> Савелий Шнайдер</span> 
                                 (ритм гитара),<span class="txt"> Клим Дёмин</span> (бас гитара)
+                                <span class="txt">Даниил Солдатов</span> (ударные)
                             </p>
                         </div>
                         <div class="image-column">
