--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 <span class="txt">Ярослав Фляйшман</span> 
                                 (соло гитара, вокал)
                                 <span class="txt"> Савелий Шнайдер</span> 
-                                (ритм гитара),<span class="txt"> Клим Дёмин</span> (бас гитара)
+                                (ритм гитара),<span class="txt"> Ксения Иванова</span> (вокал)
                                 <span class="txt">Даниил Солдатов</span> (ударные)
                             </p>
                         </div>
