--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
             </a>
             <nav>
                 <div class="nav">
-                    <button class="button">О НАС</button>
+                    <button class="button about-btn">О НАС</button>
                     <button class="button">МУЗЫКА</button>
                     <button class="button">ДИСКОГРАФИЯ</button>
-                    <button class="button">МЕРЧ</button>
+                    <form action="merch/index.html" method="get">
+                        <button class="button">МЕРЧ</button>
+                    </form>
                     <button class="button">ГАЛЛЕРЕЯ</button>
                     <button class="button">КОНЦЕРТЫ</button>
                     <button class="button">КОНТАКТЫ</button>
@@ -62,8 +64,8 @@
                                 <span class="txt">Nardo</span>
                                 )
                             </p>        
-                            <p class="hist2">Название группы написанно на французком языке. Название группы, обложка первого альбома были
-                                придуманы в больнице в
+                            <p class="hist2">Название группы написанно на французком языке. Название группы было
+                                придумано в больнице в
                                 <span class="txt">марте 2025 года</span>
                                 . Там же и основалась группа. Нас вдохновили такие группы как
                                  <span class="txt">Burzum</span>,
