--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <div class="nav">
                     <button class="button about-btn">О НАС</button>
-                    <button class="button">МУЗЫКА</button>
+                    <button class="button mus-btn">МУЗЫКА</button>
                     <button class="button">ДИСКОГРАФИЯ</button>
                     <form action="merch/index.html" method="get">
                         <button class="button">МЕРЧ</button>
@@ -76,14 +76,75 @@
                                 <span class="txt">Ярослав Фляйшман</span> 
                                 (соло гитара, вокал)
                                 <span class="txt"> Савелий Шнайдер</span> 
-                                (ритм гитара),<span class="txt"> Ксения Иванова</span> (вокал)
-                                <span class="txt">Даниил Солдатов</span> (ударные)
+                                (ритм гитара), <span class="txt">Даниил Солдатов</span> (ударные)
                             </p>
                         </div>
                         <div class="image-column">
                             <div class="nardo-container">
                                 <img src="images/nardo.jpg" alt="nardo" class="nardo">
                                 <img src="images/nardo-text.png" alt="nardo" class="nardo-text">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="gradient-section">
+            <img src="images/grd.png" alt="gradient" class="grd">
+        </div>
+
+        <section class="music-section" id="music-section">
+            <div class="music-background">
+                <img src="images/fon4.jpg" alt="фон2" class="fon2">
+            </div>
+            <div class="music-container">
+                <div class="about-content">
+                    <img src="images/mus-text.png" alt="МУЗЫКА" class="music-title"> 
+                    <div class="music-text-content">
+                        <div class="image-column">
+                            <div class="sol-container">
+                                <img src="images/albom.jpg" alt="solitude" class="sol">
+                            </div>
+                        </div>
+                        <div class="text-column">
+                            <p class="mus1"> Первый альбом:
+                                <span class="txt">Solitude</span>
+                            </p>        
+                            <p class="mus2"> Список песен:</p>
+                        <div class="list-mus">
+                            <p class="mus3">
+                                <div class="list-mus1">
+                                    1. <span class="txt">Bedemann</span>
+                                </div>
+                                <div class="list-mus2">
+                                    2. <span class="txt">Avgrunn</span>
+                                </div>
+                                <div class="list-mus3">
+                                    3. <span class="txt">Strale</span>
+                                </div>
+                                <div class="list-mus4">
+                                    4. <span class="txt">Dronning</span>
+                                </div>
+                                <div class="list-mus5">
+                                    5. <span class="txt">Witnet sa Ingenting Mer</span>
+                                </div>
+                                <div class="list-mus6">
+                                    6. <span class="txt">Rostkrankeit</span>
+                                </div>
+                                <div class="list-mus7">
+                                    7. <span class="txt">Bloody Reaper</span>
+                                </div>
+                                <div class="list-mus8">
+                                    8. <span class="txt">Sluts of Hell </span>(<span class="txt">Natterfrost</span>)
+                                </div>
+                                <div class="list-mus9">
+                                    9. <span class="txt">Avgrunn </span>(<span class="txt">Acoustic</span>)
+                                </div>
+                                </p>
+                                <p class="mus1"> Дата выхода: 
+                                    <span class="txt">29 ноября 2025 года</span>
+                                </p>
                             </div>
                         </div>
                     </div>
