--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 </div>
                                 </p>
                                 <p class="mus1"> Дата выхода: 
-                                    <span class="txt">29 ноября 2025 года</span>
+                                    <span class="txt">Декабрь 2025 года</span>
                                 </p>
                             </div>
                         </div>
