--- a/merch/index.html
+++ b/merch/index.html
@@ -40,6 +40,13 @@
                             <div class="price-item">
                                 <img src="../images/merch/pric.png" alt="1600" class="pric">
                             </div>
+                            <div class="color-selector">
+                            <button class="buy-button">
+                                <img src="../images/merch/wht.png" alt="БЕЛАЯ" class="clr">
+                            </button>
+                            <button class="buy-button">
+                                <img src="../images/merch/rd.png" alt="КРАСНАЯ" class="clr2">
+                            </button>
                             <form action="https://t.me/nardo31" method="get">
                             <button class="buy-button">
                                 <img src="../images/merch/buy.png" alt="КУПИТЬ" class="buy">
