--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 <div class="nav">
                     <button class="button about-btn">О НАС</button>
                     <button class="button mus-btn">МУЗЫКА</button>
-                    <button class="button">ДИСКОГРАФИЯ</button>
                     <form action="merch/index.html" method="get">
                         <button class="button">МЕРЧ</button>
                     </form>
@@ -76,7 +75,7 @@
                                 <span class="txt">Ярослав Фляйшман</span> 
                                 (соло гитара, вокал)
                                 <span class="txt"> Савелий Шнайдер</span> 
-                                (ритм гитара), <span class="txt">Даниил Солдатов</span> (ударные)
+                                (ритм гитара, бэк вокал), <span class="txt">Даниил Солдатов</span> (ударные)
                             </p>
                         </div>
                         <div class="image-column">
@@ -108,7 +107,7 @@
                             </div>
                         </div>
                         <div class="text-column">
-                            <p class="mus1"> Первый альбом:
+                            <p class="mus1"> Альбом
                                 <span class="txt">Solitude</span>
                             </p>        
                             <p class="mus2"> Список песен:</p>
@@ -135,15 +134,12 @@
                                 <div class="list-mus7">
                                     7. <span class="txt">Bloody Reaper</span>
                                 </div>
-                                <div class="list-mus8">
-                                    8. <span class="txt">Sluts of Hell </span>(<span class="txt">Natterfrost</span>)
-                                </div>
                                 <div class="list-mus9">
-                                    9. <span class="txt">Avgrunn </span>(<span class="txt">Acoustic</span>)
+                                    8. <span class="txt">Sluts of Hell </span>(<span class="txt">Natterfrost</span>)
                                 </div>
                                 </p>
                                 <p class="mus1"> Дата выхода: 
-                                    <span class="txt">Декабрь 2025 года</span>
+                                    <span class="txt">Февраль 2026 года</span>
                                 </p>
                             </div>
                         </div>
