--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <p class="hist2">Название группы написанно на французком языке. Название группы было
                                 придумано в больнице в
                                 <span class="txt">марте 2025 года</span>
-                                . Там же и основалась группа. Нас вдохновили такие группы как
+                                . Там же и основалась группа, а именно 18 марта 2025 года. Нас вдохновили такие группы как
                                  <span class="txt">Burzum</span>,
                                   <span class="txt">Nargaroth</span>,
                                   <span class="txt"> Venom</span>, <span class="txt">Bathory</span> и <span class="txt">Mutiilation</span>
@@ -119,23 +119,20 @@
                                 <div class="list-mus2">
                                     2. <span class="txt">Avgrunn</span>
                                 </div>
-                                <div class="list-mus3">
-                                    3. <span class="txt">Strale</span>
-                                </div>
                                 <div class="list-mus4">
-                                    4. <span class="txt">Dronning</span>
+                                    3. <span class="txt">Dronning</span>
                                 </div>
                                 <div class="list-mus5">
-                                    5. <span class="txt">Witnet sa Ingenting Mer</span>
+                                    4. <span class="txt">Witnet sa Ingenting Mer</span>
                                 </div>
                                 <div class="list-mus6">
-                                    6. <span class="txt">Rostkrankeit</span>
+                                    5. <span class="txt">Rostkrankeit</span>
                                 </div>
                                 <div class="list-mus7">
-                                    7. <span class="txt">Bloody Reaper</span>
+                                    6. <span class="txt">Bloody Reaper</span>
                                 </div>
                                 <div class="list-mus9">
-                                    8. <span class="txt">Sluts of Hell </span>(<span class="txt">Natterfrost</span>)
+                                    7. <span class="txt">Sluts of Hell </span>(<span class="txt">Natterfrost</span>)
                                 </div>
                                 </p>
                                 <p class="mus1"> Дата выхода: 
